--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.1.27",
     "dayjs": "^1.8.13",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
@@ -15,6 +16,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.1.0",
+    "redux": "^4.0.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.86.0",
     "socket.io-client": "^2.2.0",
