removed index.js from code coverage

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.test.js",
+      "!src/**/index.js",
       "src/**/**/*.js",
+      "!src/**/**/index.js",
       "!src/index.js",
       "!src/aws-exports.js",
       "!src/serviceWorker.js"
