--- a/amplify/backend/auth/cognito40bf02bf/cognito40bf02bf-cloudformation-template.yml
+++ b/amplify/backend/auth/cognito40bf02bf/cognito40bf02bf-cloudformation-template.yml
@@ -118,24 +118,18 @@ Parameters:
   userpoolClientSetAttributes:
     Type: String
           
-  useDefault:
+  resourceName:
     Type: String
             
   authSelections:
     Type: String
-            
-  resourceName:
+                                                    
+  useDefault:
     Type: String
-              
-  thirdPartyAuth:
-    Type: String
-                
+                  
   usernameAttributes:
     Type: CommaDelimitedList
-        
-  hostedUI:
-    Type: String
-                                                
+    
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -213,7 +207,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: zatiq_app_clientWeb
+      ClientName: cognito40bf02bf_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -345,7 +339,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'zatiq', !Join ['',['zatiq', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'cognito40bf02bf_identitypool_40bf02bf', !Join ['',['cognito40bf02bf_identitypool_40bf02bf', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
