hopefully setup cognito resources for the last time

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,13 +1,7 @@
 {
 	"auth": {
-		"cognito32ac4dea": {
+		"cognitozatiqresourece": {
 			"service": "Cognito",
-			"providerPlugin": "awscloudformation"
-		}
-	},
-	"storage": {
-		"zatiqresource": {
-			"service": "S3",
 			"providerPlugin": "awscloudformation"
 		}
 	}
