--- a/amplify/backend/auth/cognitozatiqresourece/cognitozatiqresourece-cloudformation-template.yml
+++ b/amplify/backend/auth/cognitozatiqresourece/cognitozatiqresourece-cloudformation-template.yml
@@ -118,18 +118,24 @@ Parameters:
   userpoolClientSetAttributes:
     Type: String
           
-  resourceName:
+  useDefault:
     Type: String
             
   authSelections:
     Type: String
-                                                    
-  useDefault:
+            
+  resourceName:
     Type: String
-                  
+              
+  thirdPartyAuth:
+    Type: String
+                
   usernameAttributes:
     Type: CommaDelimitedList
-    
+        
+  hostedUI:
+    Type: String
+                                                
 Conditions:
   ShouldNotCreateEnvResources: !Equals [ !Ref env, NONE ]
 
@@ -209,7 +215,7 @@ Resources:
   # Depends on UserPool for ID reference
     Type: "AWS::Cognito::UserPoolClient"
     Properties:
-      ClientName: cognito32ac4dea_app_clientWeb
+      ClientName: cognitozatiqresourece_app_clientWeb
       
       RefreshTokenValidity: !Ref userpoolClientRefreshTokenValidity
       UserPoolId: !Ref UserPool
@@ -341,7 +347,7 @@ Resources:
   # Always created
     Type: AWS::Cognito::IdentityPool
     Properties: 
-      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'cognito32ac4dea_identitypool_32ac4dea', !Join ['',['cognito32ac4dea_identitypool_32ac4dea', '__', !Ref env]]]
+      IdentityPoolName: !If [ShouldNotCreateEnvResources, 'zatiqpool', !Join ['',['zatiqpool', '__', !Ref env]]]
       
       CognitoIdentityProviders:
         - ClientId:  !Ref UserPoolClient
