setup amp without using a profile

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,5 +4,11 @@
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation"
 		}
+	},
+	"storage": {
+		"zatiqstorageresource": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
 	}
 }
