--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.8.13",
     "isomorphic-fetch": "^2.2.1",
     "prop-types": "^15.7.2",
+    "query-string": "^6.5.0",
     "ramda": "^0.26.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
