--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -1,5 +1,5 @@
 {
-    "projectName": "zatiq-app",
+    "projectName": "zatiq-application",
     "version": "2.0",
     "frontend": "javascript",
     "javascript": {
