--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -5,7 +5,12 @@
 			"providerPlugin": "awscloudformation"
 		}
 	},
-	"storage": {},
+	"storage": {
+		"zstorage": {
+			"service": "S3",
+			"providerPlugin": "awscloudformation"
+		}
+	},
 	"hosting": {
 		"S3AndCloudFront": {
 			"service": "S3AndCloudFront",
