--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format-usd": "^1.0.1",
     "google-libphonenumber": "^3.2.2",
     "isomorphic-fetch": "^2.2.1",
+    "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
     "ramda": "^0.26.1",
