--- a/.eslintrc
+++ b/.eslintrc
@@ -30,6 +30,7 @@
     "jsx-a11y/label-has-for": 0,
     "jsx-a11y/label-has-associated-control": 0,
     "padded-blocks": 1,
-    "react/require-default-props": 1
+    "react/require-default-props": 1,
+    "react/jsx-one-expression-per-line": 0
   }
 }
