--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "semantic-ui-react": "^0.86.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "later": "RickCarlino/later"
   },
   "scripts": {
     "start": "react-scripts start",
