--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "format-usd": "^1.0.1",
     "google-libphonenumber": "^3.2.2",
     "isomorphic-fetch": "^2.2.1",
+    "later": "RickCarlino/later",
     "polished": "^3.4.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.5.0",
@@ -38,8 +39,7 @@
     "semantic-ui-react": "^0.86.0",
     "socket.io-client": "^2.2.0",
     "styled-components": "^4.2.0",
-    "uuid": "^3.3.2",
-    "later": "RickCarlino/later"
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
