--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL="http://localhost:4000"
-REACT_APP_API_URL_PROD="https://contractstyle.com"
+REACT_APP_API_URL_PROD="https://iliareingold.com"
